--- a/css/styles.css
+++ b/css/styles.css
@@ -3109,7 +3109,7 @@ input[type="button"].btn--primary:focus {
  * ------------------------------------------------------------------- */
 .s-header__nav {
     font-family: var(--font-1);
-    font-size: 1.45rem;
+    font-size: 1.7rem;
     font-weight: 400;
     margin: 0;
     padding: 0;
@@ -3350,9 +3350,9 @@ input[type="button"].btn--primary:focus {
     bottom: 0;
     width: 100%;
     height: 100%;
-    background-image: url(../images/header-bg-3000.jpg);
+    background-image: url(../images/space-bg-2.gif);
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center 90%;
     background-size: cover;
 }
 
@@ -3367,7 +3367,7 @@ input[type="button"].btn--primary:focus {
     width: 100%;
     height: 100%;
     background: black;
-    opacity: .5;
+    opacity: .4;
 }
 
 .s-hero__bg::after {
